Fix misattributed commit warning in dark mode

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -176,6 +176,13 @@ $overlay-background-color: rgba(0, 0, 0, 0.4);
   --co-author-tag-border-color: #{$blue-200};
 
   /**
+   * Author input (co-authors)
+   */
+  --commit-warning-badge-background-color: #{$gray-000};
+  --commit-warning-badge-border-color: #{$gray-300};
+  --commit-warning-badge-icon-color: #{$gray-900};
+
+  /**
    * The height of the title bar area on Win32 platforms
    * If changed, update titleBarHeight in 'app/src/ui/dialog/dialog.tsx'
   */
